--- a/css/style.css
+++ b/css/style.css
@@ -402,7 +402,7 @@ body::-webkit-scrollbar-thumb:hover,
 .header__container {
   max-width: 1360px;
   width: 100%;
-  padding: 20px;
+  padding: 20px 0;
   margin: 0 auto;
   display: flex;
   align-items: center;
